# Snake

./: README.md  algorithmeai.py  gitignore  pyproject.toml
Groupchat feature/: groupchat.md  groupchat_enhanced.py  groupchatfast.py  whatsapp.py
Submission Folder/: submission - Snake - 100 Layers - AutoML - 55% threshold.csv  submission - Snake - 100 Layers - AutoML - 58% threshold.csv  submission - Snake - 100 Layers - AutoML - 60% threshold.csv  submission - Snake - 100 Layers - AutoML - 61% threshold.csv  submission - Snake - 100 Layers - AutoML - 64% threshold.csv  submission - Snake - 100 Layers - AutoML.csv  submission - Snake - 50 Layers - AutoML - 55% threshold.csv  submission - Snake - 50 Layers - AutoML.csv
